Fixed img not stretching

--- a/assets/css/chatbox.css
+++ b/assets/css/chatbox.css
@@ -484,6 +484,7 @@ a {
     height: 35px;
     width: 35px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .users .user-header .content .details a {
